<resources>
    <string name="app_name">Moodr</string>
    <string name="title_activity_side_menu">SideMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_friends">Friends</string>
    <string name="action_nearme">Near Me</string>
    <string name="action_offline">Offline Mode</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_login"> Moodr</string>
    <string name="action_latest">Latest</string>

    <!-- Strings related to mood records -->
    <!-- tv = textView -->
    <string name="tv_emotion">Mood</string>
    <string name="tv_social_situation">Social Situation</string>
    <string name="tv_trigger">Trigger</string>
    <string name="btn_picture">ADD PICTURE</string>
    <string name="btn_location">ADD LOCATION</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Moodr</string>
    <string name="title_activity_view_friend_mood">ViewFriendMoodActivity</string>
    <string name="title_activity_view_my_mood">ViewMyMoodActivity</string>
    <string name="title_activity_my_moods">MyMoodsActivity</string>
    <string name="title_activity_profile">Profile</string>


    <!-- Strings related to add/edit Mood -->
    <string name="action_add_complete">Done</string>
    <string name="action_add_cancel">Cancel</string>

    <!--Strings related to profile-->
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="Recent">Recent</string>
    <string name="filter_emotion">Filter by Emotion</string>
    <string name="filter_keyword">Search Keyword</string>
    <string name="angry">Angry</string>
    <string name="confused">Confused</string>
    <string name="disgusted">Disgusted</string>
    <string name="happy">Happy</string>
    <string name="scared">Scared</string>
    <string name="shame">Shame</string>
    <string name="surprise">Surprised</string>
    <string name="sad">Sad</string>
    <string name="Moodr">Moodr</string>
    <string name="Filter_mood">Filter by Mood</string>
    <string name="surprised">Surprised</string>
    <string name="view_all">View All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_story">ViewStoryActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="addStory">Create Story</string>
    <string name="title_activity_camera">Camera</string>

</resources>
