<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter_recent"
        android:orderInCategory="101"
        android:title="@string/Recent"
        app:showAsAction="never" />

    <item
        android:title="@string/filter_keyword"
        android:id="@+id/filter_keyword"/>

    <item
        android:id="@+id/filter_moods"
        android:orderInCategory="101"
        android:title="@string/Filter_mood"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/filter_angry"
                android:title="@string/angry"/>
            <item
                android:id="@+id/filter_confused"
                android:title="@string/confused"/>
            <item
                android:id="@+id/filter_disgusted"
                android:title="@string/disgusted"/>
            <item
                android:id="@+id/filter_happy"
                android:title="@string/happy"/>
            <item
                android:id="@+id/filter_scared"
                android:title="@string/scared"/>
            <item
                android:id="@+id/filter_sad"
                android:title="@string/sad"/>
            <item
                android:id="@+id/filter_shame"
                android:title="@string/shame"/>
            <item
                android:id="@+id/filter_surprise"
                android:title="@string/surprised"/>
        </menu>
    </item>





</menu>