<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cmput301w17t08.moodr.MyProfileActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_friends"
        android:orderInCategory="100"
        android:title="@string/action_friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_nearme"
        android:orderInCategory="100"
        android:title="@string/action_nearme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_offline"
        android:orderInCategory="100"
        android:title="@string/action_offline"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
